--- a/new_file.css
+++ b/new_file.css
@@ -3,3 +3,9 @@ h1 {
     color: white;
     background-color: rgb(8, 77, 65);
 }
+
+h2 {
+    text-align: center;
+    color: white;
+    background-color: rgb(8, 77, 65);
+}
